[package]
name = "biscuit-converter"
version = "0.2.2"
edition = "2021"
authors = ["Junbeom Lee <junbeoml22@gmail.com>"]
description = "A fast and safe numeric parser for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JunbeomL22/biscuit-converter"
keywords = ["parser", "numeric-parser", "fast", "safe", "bit-operation"]

[dev-dependencies]
criterion = "0.5"
atoi = "2.0"
anyhow = "1.0"

[[bench]]
name = "i64"
harness = false

[[bench]]
name = "i128"
harness = false

[[bench]]
name = "u8"
harness = false

[[bench]]
name = "u16"
harness = false

[[bench]]
name = "u32"
harness = false

[[bench]]
name = "u64"
harness = false

[[bench]]
name = "u128"
harness = false



