[package]
name = "biscuit-converter"
version = "0.3.0"
edition = "2021"
authors = ["Junbeom Lee <junbeoml22@gmail.com>"]
description = "A decimal ASCII parser"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JunbeomL22/biscuit-converter"
keywords = ["parser", "numeric-parser", "fast", "safe", "bit-operation"]

[dev-dependencies]
criterion = "0.5"
atoi = "2.0"
anyhow = "1.0"
num-traits = "0.2"

[[bench]]
name = "i8"
harness = false

[[bench]]
name = "i16"
harness = false

[[bench]]
name = "i32"
harness = false

[[bench]]
name = "i64"
harness = false

[[bench]]
name = "i128"
harness = false

[[bench]]
name = "u8"
harness = false

[[bench]]
name = "u16"
harness = false

[[bench]]
name = "u32"
harness = false

[[bench]]
name = "u64"
harness = false

[[bench]]
name = "u128"
harness = false

